--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@heroicons/react": "^2.1.3",
+    "@vercel/analytics": "^1.2.2",
     "framer-motion": "^11.1.7",
     "next": "14.1.0",
     "react": "18",
